<resources>
    <string name="app_name">EnjoyFood</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="my_restourant_app">My Restourant App</string>
    <string name="we_love_food">We Love Food</string>
    <string name="sing_in">Sing In</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="already_registered">Already Registered?</string>
    <string name="dont_have_an_account">Dont Have An Account?</string>

</resources>